kustomizations/pattern-library/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pattern-library
  namespace: journal
spec:
  replicas: ${replicas:-1}
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: pattern-library
        image: docker.io/elifesciences/pattern-library:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "50Mi"
            cpu: "20m"
          limits:
            memory: "50Mi"
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 10
          timeoutSeconds: 10
