kustomizations/pattern-library/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pattern-library-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
