kustomizations/pattern-library/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pattern-library
  annotations:
    cert-manager.io/cluster-issuer: "${cert_manager_issuer}"
spec:
  ingressClassName: traefik
  rules:
  - host: ${hostname}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: pattern-library-web
            port:
              number: 80
  tls:
  - hosts:
    - ${hostname}
    secretName: pattern-library-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pattern-library-traefik
  annotations:
    cert-manager.io/cluster-issuer: "${cert_manager_issuer}"
spec:
  ingressClassName: traefik
  rules:
  - host: ${hostname}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: pattern-library-web
            port:
              number: 80
  tls:
  - hosts:
    - ${hostname}
    secretName: pattern-library-tls
